// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallControlConsultComponent Snapshots Interactions should call mockEndConsultCall when cancel button is clicked 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1h:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1h:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1i:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1i:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1j:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1j:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1k:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1k:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1l:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper md-focus-ring-wrapper children"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1l:"
    >
      <p>
        End Consult
      </p>
    </div>
    <div
      data-tippy-root=""
      id="tippy-54"
      style="pointer-events: none; z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px;"
    />
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Interactions should call mockOnToggleConsultMute when mute button is clicked 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r17:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper md-focus-ring-wrapper children"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r17:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r18:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r18:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r19:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r19:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1a:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1a:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1b:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1b:"
    >
      <p>
        End Consult
      </p>
    </div>
    <div
      data-tippy-root=""
      id="tippy-40"
      style="pointer-events: none; z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px;"
    />
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Interactions should call mockOnTransfer when transfer button is clicked 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1c:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1c:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1d:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1d:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1e:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper md-focus-ring-wrapper children"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1e:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1f:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1f:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1g:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1g:"
    >
      <p>
        End Consult
      </p>
    </div>
    <div
      data-tippy-root=""
      id="tippy-47"
      style="pointer-events: none; z-index: 9999; transition: none; position: absolute; left: 0px; top: 0px; margin: 0px;"
    />
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render the component with all control buttons 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r0:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r0:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r2:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r2:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r3:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r3:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r4:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r4:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render when end consult is disabled 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r12:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r12:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r13:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r13:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r14:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r14:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r15:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r15:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r16:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r16:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render when transfer is disabled 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:rp:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rp:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rq:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rq:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rr:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rr:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rs:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rs:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rt:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rt:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render with different agent name 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Bob Johnson
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:rk:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rk:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rl:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rl:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rm:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rm:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rn:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rn:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:ro:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ro:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render with end consult hidden 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:ru:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ru:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rv:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rv:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r10:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r10:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r11:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r11:"
    >
      <p>
        Merge
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render with muted state 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r5:"
      class="md-button-circle-wrapper call-control-button-muted md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-muted-icon"
        name="microphone-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r5:"
    >
      <p>
        Unmute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r6:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r6:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r7:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r7:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r8:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r8:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r9:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r9:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render without mute button when muteUnmute is hidden 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:ra:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ra:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rb:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rb:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rc:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rc:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rd:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rd:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:re:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:re:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots Rendering - Tests for UI elements and visual states of CallControlConsult component should render without transfer button when onTransfer is undefined 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:rf:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rf:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rg:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rg:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rh:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rh:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:ri:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:ri:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:rj:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:rj:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should handle combination of props: no mute, no transfer, disabled end consult 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r20:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r20:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r21:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r21:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r22:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r22:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r23:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r23:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r24:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r24:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should handle edge case with empty agent name 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      />
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r25:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r25:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r26:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r26:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r27:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r27:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r28:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r28:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r29:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r29:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should update when isMuted prop changes 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1r:"
      class="md-button-circle-wrapper call-control-button-muted md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-muted-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1r:"
    >
      <p>
        Unmute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1s:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1s:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1t:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1t:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1u:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1u:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1v:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1v:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;

exports[`CallControlConsultComponent Snapshots State Management should update when muteUnmute visibility changes 1`] = `
<div
  class="call-control-consult"
>
  <div
    class="consult-header"
  >
    <mdc-avatar
      class="task-avatar"
      size="32"
    />
    <div>
      <mdc-text
        class="md-text-wrapper consult-agent-name"
        tagname="p"
        type="body-large-bold"
      >
        Alice
      </mdc-text>
      <mdc-text
        class="md-text-wrapper consult-sub-text"
        tagname="p"
        type="body-midsize-regular"
      >
        Consulting
         • 
        <time
          class="task-text task-text--secondary"
          datetime="00:00"
        >
          00:00
        </time>
      </mdc-text>
    </div>
  </div>
  <div
    class="consult-buttons consult-buttons-container"
  >
    <button
      aria-describedby="react-aria-:r1m:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="mute-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="microphone-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1m:"
    >
      <p>
        Mute
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1n:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="switchToMainCall-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-swap-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1n:"
    >
      <p>
        Switch to Call
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1o:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="transfer-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="next-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1o:"
    >
      <p>
        Transfer
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1p:"
      class="md-button-circle-wrapper call-control-button md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="conference-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-button-icon"
        name="call-merge-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1p:"
    >
      <p>
        Merge
      </p>
    </div>
    <button
      aria-describedby="react-aria-:r1q:"
      class="md-button-circle-wrapper call-control-consult-button-cancel md-button-simple-wrapper"
      data-color="primary"
      data-disabled="false"
      data-ghost="false"
      data-inverted="false"
      data-multiple-children="false"
      data-outline="false"
      data-shallow-disabled="false"
      data-size="40"
      data-testid="cancel-consult-btn"
      type="button"
    >
      <mdc-icon
        class="call-control-consult-button-cancel-icon"
        name="headset-muted-bold"
      />
    </button>
    <div
      class="md-tooltip-label"
      id="react-aria-:r1q:"
    >
      <p>
        End Consult
      </p>
    </div>
  </div>
</div>
`;
